--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -7,7 +7,10 @@
  * LICENSE.txt file in the root directory of this source tree.
  */
 
-@import '../../../node_modules/normalize.css/normalize.css';
+
+@import '/node_modules/bootstrap/dist/css/bootstrap.css';
+@import '/node_modules/font-awesome/css/font-awesome.css';
+@import '/src/styles/sb-admin.css';
 
 /*! React Starter Kit | MIT License | https://www.reactstarterkit.com/ */
 
