기본 페이지 추가

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -20,6 +20,22 @@
  * Base styles
  * ========================================================================== */
 
+
+ .page-wrapper {
+     padding: 20px;
+     min-height: 568px;
+     background-color: #fff;
+ }
+
+ @media(min-width:768px) {
+     .page-wrapper {
+         position: inherit;
+         margin: 0 0 0 250px;
+         padding: 0 30px;
+         border-left: 1px solid #e7e7e7;
+     }
+ }
+
 html {
   color: #222;
   font-size: 1em; /* ~16px; */
